# ChangeLog for media-sound/streamripper
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-sound/streamripper/ChangeLog,v 1.41 2006/12/24 00:51:07 dertobi123 Exp $

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  streamripper-1.61.27.ebuild:
  Stable on ppc.

  19 Nov 2006; Thomas Cort <tcort@gentoo.org> streamripper-1.61.27.ebuild:
  Stable on alpha.

  26 Oct 2006; Thomas Cort <tcort@gentoo.org> streamripper-1.61.27.ebuild:
  Stable on amd64.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  streamripper-1.61.26.ebuild:
  hppa stable, bug #150220

  05 Oct 2006; Thomas Cort <tcort@gentoo.org> streamripper-1.61.27.ebuild:
  Added ~alpha keyword.

*streamripper-1.61.27 (11 Sep 2006)

  11 Sep 2006; Thomas Cort <tcort@gentoo.org> +streamripper-1.61.27.ebuild:
  Version bump to 1.61.27.

  04 Sep 2006; Thomas Cort <tcort@gentoo.org>
  -files/streamripper-1.60.5-interface.patch,
  -files/streamripper-1.60.5-syslibmad.patch,
  -files/streamripper-1.60.8-syslibmad.patch, -streamripper-1.60.10.ebuild,
  -streamripper-1.61.7.ebuild, -streamripper-1.61.8.ebuild,
  -streamripper-1.61.11.ebuild, -streamripper-1.61.17.ebuild:
  Remove old ebuilds.

  04 Sep 2006; Joshua Jackson <tsunam@gentoo.org>
  streamripper-1.61.26.ebuild:
  Stable x86; security bug #144861

  01 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  streamripper-1.61.26.ebuild:
  ppc stable, bug #144861

  31 Aug 2006; Thomas Cort <tcort@gentoo.org> streamripper-1.61.26.ebuild:
  Stable on amd64 wrt security Bug #144861.

  31 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  streamripper-1.61.26.ebuild:
  Stable on sparc wrt security #144861

  31 Aug 2006; Markus Rothe <corsair@gentoo.org>
  streamripper-1.61.26.ebuild:
  Stable on ppc64; bug #144861

*streamripper-1.61.26 (31 Aug 2006)

  31 Aug 2006; Thomas Cort <tcort@gentoo.org> metadata.xml,
  +streamripper-1.61.26.ebuild: