@@ -2,8 +2,4 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
   <herd>sound</herd>
-  <maintainer>
-    <email>tcort@gentoo.org</email>
-    <name>Thomas Cort</name>
-  </maintainer>
 </pkgmetadata>
