@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-sound/streamripper/streamripper-1.61.27.ebuild,v 1.5 2006/12/24 00:51:07 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/streamripper/streamripper-1.61.27.ebuild,v 1.7 2007/03/12 20:44:39 armin76 Exp $
 
 EAPI="prefix"
 
