@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/streamripper
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-sound/streamripper/ChangeLog,v 1.41 2006/12/24 00:51:07 dertobi123 Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/streamripper/ChangeLog,v 1.43 2007/03/19 12:28:54 kloeri Exp $
+
+  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
+  Remove tcort from metadata.xml due to retirement.
+
+  12 Mar 2007; Raúl Porcel <armin76@gentoo.org>
+  streamripper-1.61.27.ebuild:
+  x86 stable
 
   24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   streamripper-1.61.27.ebuild:
